--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -4,13 +4,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      # 1. Configuration initiale du job
+      - name: Set up job
+        run: echo "Démarrage du job CI/CD"
+      
+      # 2. Initialisation de l'environnement
+      - name: Initialisation
+        run: echo "Initialisation de l'environnement..."
+      
+      # 3. Récupération du code source
+      - name: Récupération du code
         uses: actions/checkout@v4
-      - name: Setup environment
-        run: echo "Initialisation..."
+      
+      # 4. Étape de build/compilation
       - name: Build
-        run: echo "Building..."
+        run: echo "Building the application..."
+      
+      # 5. Exécution des tests
       - name: Run tests
         run: echo "Running tests..."
-      - name: Package
-        run: echo "Packaging..."
+      
+      # 6. Packaging de l'application
+      - name: Packaging
+        run: echo "Packaging the application..."
+      
+      # 7. Fin du pipeline
+      - name: Fin du pipeline
+        run: echo "Pipeline terminé avec succès"
+      
+      # 8. Nettoyage et fin du job
+      - name: Complete job
+        run: echo "Job terminé - Nettoyage des ressources"
