--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,9 +1,9 @@
 name: CI Pipeline
 on:
   push:
-    branches: [LAB]
+    branches: LAB
   pull_request:
-    branches: [LAB]
+    branches: LAB
 
 jobs:
   build:
